added indicator animation

--- a/ford-car/index.html
+++ b/ford-car/index.html
@@ -60,24 +60,23 @@
                            <div class="small-lamp small-lamp--start"></div>
                         </div>
                         <div class="decor__center">
-                           <div class="decor__wrapper-applique-center">
-                              <div
-                                 class="decor__applique-center applique-center">
+                           <div class="decor__wrapper-picture-center">
+                              <div class="decor__picture-center picture-center">
                                  <div
-                                    class="applique-center__first-transparent-block">
-                                    <div class="applique-center__dark-block">
+                                    class="picture-center__first-transparent-block">
+                                    <div class="picture-center__dark-block">
                                        <div
-                                          class="applique-center__second-transparent-block">
+                                          class="picture-center__second-transparent-block">
                                           <div
-                                             class="applique-center__third-transparent-block">
+                                             class="picture-center__third-transparent-block">
                                           </div>
                                        </div>
                                     </div>
                                  </div>
                                  <span
-                                    class="applique-center__text applique-center__text--dark">BOSS</span>
+                                    class="picture-center__text picture-center__text--dark">BOSS</span>
                                  <span
-                                    class="applique-center__text applique-center__text--yellow">203</span>
+                                    class="picture-center__text picture-center__text--yellow">203</span>
                               </div>
                            </div>
                            <div class="decor__shadow-start-center"></div>
@@ -176,25 +175,39 @@
                <div class="section__indicator indicator">
                   <div class="indicator__list">
                      <div class="indicator__item">
-                        <span>Body</span>
+                        <div class="indicator__border"></div>
+                        <div class="indicator__bg"></div>
+                        <span class="indicator__text">Body</span>
                      </div>
                      <div class="indicator__item">
-                        <span>Window</span>
+                        <div class="indicator__border"></div>
+                        <div class="indicator__bg"></div>
+                        <span class="indicator__text">Window</span>
                      </div>
                      <div class="indicator__item">
-                        <span>Door</span>
+                        <div class="indicator__border"></div>
+                        <div class="indicator__bg"></div>
+                        <span class="indicator__text">Door</span>
                      </div>
                      <div class="indicator__item">
-                        <span>Wheels</span>
+                        <div class="indicator__border"></div>
+                        <div class="indicator__bg"></div>
+                        <span class="indicator__text">Wheels</span>
                      </div>
                      <div class="indicator__item">
-                        <span>Light</span>
+                        <div class="indicator__border"></div>
+                        <div class="indicator__bg"></div>
+                        <span class="indicator__text">Light</span>
                      </div>
                      <div class="indicator__item">
-                        <span>Applique</span>
+                        <div class="indicator__border"></div>
+                        <div class="indicator__bg"></div>
+                        <span class="indicator__text">Picture</span>
                      </div>
                      <div class="indicator__item">
-                        <span>Neon</span>
+                        <div class="indicator__border"></div>
+                        <div class="indicator__bg"></div>
+                        <span class="indicator__text">Neon</span>
                      </div>
                   </div>
                </div>
