indicator animation sequence

--- a/ford-car/index.html
+++ b/ford-car/index.html
@@ -181,13 +181,13 @@
                      </div>
                      <div class="indicator__item">
                         <div class="indicator__border"></div>
-                        <div class="indicator__bg"></div>
-                        <span class="indicator__text">Window</span>
+                        <div class="indicator__bg"></div><span
+                           class="indicator__text">Window</span>
                      </div>
                      <div class="indicator__item">
                         <div class="indicator__border"></div>
-                        <div class="indicator__bg"></div>
-                        <span class="indicator__text">Door</span>
+                        <div class="indicator__bg"></div><span
+                           class="indicator__text">Door</span>
                      </div>
                      <div class="indicator__item">
                         <div class="indicator__border"></div>
