--- a/ford-car/index.html
+++ b/ford-car/index.html
@@ -27,72 +27,73 @@
                         </div>
                         <div class="upper-path__bottom-to-top-center"></div>
                         <div class="upper-path__bottom-to-top-back">
-                           <div class="upper-path__decor decor-rear-window">
+                           <!-- <div class="upper-path__decor decor-rear-window">
                               <div class="decor-rear-window__block"></div>
                               <div class="decor-rear-window__block"></div>
                               <div class="decor-rear-window__block"></div>
                               <div class="decor-rear-window__block"></div>
                               <div class="decor-rear-window__block"></div>
-                           </div>
+                           </div> -->
                         </div>
                      </div>
                   </div>
                   <div class="car__lower-path lower-path">
                      <div class="lower-path__body">
-                        <div class="lower-path__hood hood">
+                        <!-- <div class="lower-path__hood hood">
                            <div class="hood__decor"></div>
-                        </div>
-                        <div class="lower-path__exhaust"></div>
+                        </div> -->
+                        <!-- <div class="lower-path__exhaust"></div> -->
                         <div class="lower-path__front"></div>
                         <div class="lower-path__center-back">
                         </div>
 
                      </div>
-                     <div class="lower-path__decor decor">
-                        <div class="decor__start">
-                           <div class="decor__outline"></div>
-                           <div class="decor__headlight  headlight">
-                              <div class="headlight__bg"></div>
-                              <div class="headlight__bulb"></div>
-                           </div>
-                           <div class="decor__bumper-path"></div>
-                           <div class="black-triangle"></div>
-                           <div class="small-lamp small-lamp--start"></div>
+                     <!-- <div class="lower-path__decor decor">
+                     <div class="decor__start">
+                        <div class="decor__outline"></div>
+                        <div class="decor__headlight  headlight">
+                           <div class="headlight__bg"></div>
+                           <div class="headlight__bulb"></div>
                         </div>
-                        <div class="decor__center">
-                           <div class="decor__wrapper-picture-center">
-                              <div class="decor__picture-center picture-center">
-                                 <div
-                                    class="picture-center__first-transparent-block">
-                                    <div class="picture-center__dark-block">
+                        <div class="decor__bumper-path"></div>
+                        <div class="black-triangle"></div>
+                        <div class="small-lamp small-lamp--start"></div>
+                     </div>
+                     <div class="decor__center">
+                        <div class="decor__wrapper-picture-center">
+                           <div class="decor__picture-center picture-center">
+                              <div
+                                 class="picture-center__first-transparent-block">
+                                 <div class="picture-center__dark-block">
+                                    <div
+                                       class="picture-center__second-transparent-block">
                                        <div
-                                          class="picture-center__second-transparent-block">
-                                          <div
-                                             class="picture-center__third-transparent-block">
-                                          </div>
+                                          class="picture-center__third-transparent-block">
                                        </div>
                                     </div>
                                  </div>
-                                 <span
-                                    class="picture-center__text picture-center__text--dark">BOSS</span>
-                                 <span
-                                    class="picture-center__text picture-center__text--yellow">203</span>
                               </div>
+                              <span
+                                 class="picture-center__text picture-center__text--dark">BOSS</span>
+                              <span
+                                 class="picture-center__text picture-center__text--yellow">203</span>
                            </div>
-                           <div class="decor__shadow-start-center"></div>
-                           <div class="decor__gradient"></div>
-                           <div class="decor__shadow-center"></div>
                         </div>
-                        <div class="decor__end">
-                           <div class="small-lamp small-lamp--end"></div>
-                           <div class="silver-triangle"></div>
-                        </div>
+                        <div class="decor__shadow-start-center"></div>
+                        <div class="decor__gradient"></div>
+                        <div class="decor__shadow-center"></div>
                      </div>
+                     <div class="decor__end">
+                        <div class="small-lamp small-lamp--end"></div>
+                        <div class="silver-triangle"></div>
+                     </div>
+                  </div> -->
                      <div class="lower-path__wheels wheels">
                         <div class="wheels__block  wheels__block--front">
                            <div class="wheels__bg"></div>
                            <div class="wheels__tyre"></div>
                            <div class="wheels__circle"></div>
+
                            <div class="wheels__lines-block">
                               <div class="line line--1"></div>
                               <div class="line line--2"></div>
@@ -155,20 +156,20 @@
                         </div>
                      </div>
                   </div>
-                  <div class="car__door">
+                  <!-- <div class="car__door">
                      <div class="car__handle"></div>
-                  </div>
+                  </div> -->
                   <div class="car__side-window side-window">
-                     <div class="side-window__back back">
+                     <!-- <div class="side-window__back back">
                         <div class="back__left"></div>
-                     </div>
-                     <div class="side-window__front front">
+                     </div> -->
+                     <!-- <div class="side-window__front front">
                         <div class="front__bg"></div>
                         <div class="front__top-line"></div>
                         <div class="front__bottom-line"></div>
-                     </div>
-                     <div class="car__side-mirror side-mirror">
-                     </div>
+                     </div> -->
+                     <!-- <div class="car__side-mirror side-mirror">
+                     </div> -->
                   </div>
 
                </div>
@@ -182,17 +183,18 @@
                      <div class="indicator__item">
                         <div class="indicator__border"></div>
                         <div class="indicator__bg"></div><span
-                           class="indicator__text">Window</span>
+                           class="indicator__text">Wheels</span>
                      </div>
                      <div class="indicator__item">
                         <div class="indicator__border"></div>
                         <div class="indicator__bg"></div><span
-                           class="indicator__text">Door</span>
+                           class="indicator__text">Window</span>
                      </div>
+                     <!--
                      <div class="indicator__item">
                         <div class="indicator__border"></div>
                         <div class="indicator__bg"></div>
-                        <span class="indicator__text">Wheels</span>
+                        <span class="indicator__text">Window</span>
                      </div>
                      <div class="indicator__item">
                         <div class="indicator__border"></div>
@@ -208,7 +210,7 @@
                         <div class="indicator__border"></div>
                         <div class="indicator__bg"></div>
                         <span class="indicator__text">Neon</span>
-                     </div>
+                     </div> -->
                   </div>
                </div>
             </div>
