add animation window, door, front

--- a/ford-car/index.html
+++ b/ford-car/index.html
@@ -19,6 +19,7 @@
       <main class="page">
          <div class="section">
             <div class="section__container">
+               <!-- <div class="start">Start</div> -->
                <div class="section__car car">
                   <div class="car__upper-path upper-path">
                      <div class="upper-path__body">
@@ -27,67 +28,67 @@
                         </div>
                         <div class="upper-path__bottom-to-top-center"></div>
                         <div class="upper-path__bottom-to-top-back">
-                           <!-- <div class="upper-path__decor decor-rear-window">
+                           <div class="upper-path__decor decor-rear-window">
                               <div class="decor-rear-window__block"></div>
                               <div class="decor-rear-window__block"></div>
                               <div class="decor-rear-window__block"></div>
                               <div class="decor-rear-window__block"></div>
                               <div class="decor-rear-window__block"></div>
-                           </div> -->
+                           </div>
                         </div>
                      </div>
                   </div>
                   <div class="car__lower-path lower-path">
                      <div class="lower-path__body">
-                        <!-- <div class="lower-path__hood hood">
+                        <div class="lower-path__hood hood">
                            <div class="hood__decor"></div>
-                        </div> -->
+                        </div>
                         <!-- <div class="lower-path__exhaust"></div> -->
                         <div class="lower-path__front"></div>
                         <div class="lower-path__center-back">
                         </div>
 
                      </div>
-                     <!-- <div class="lower-path__decor decor">
-                     <div class="decor__start">
-                        <div class="decor__outline"></div>
-                        <div class="decor__headlight  headlight">
-                           <div class="headlight__bg"></div>
-                           <div class="headlight__bulb"></div>
+                     <div class="lower-path__decor decor">
+                        <div class="decor__start">
+                           <div class="decor__outline"></div>
+                           <div class="decor__headlight  headlight">
+                              <div class="headlight__bg"></div>
+                              <div class="headlight__bulb"></div>
+                           </div>
+                           <div class="decor__bumper-path"></div>
+                           <div class="black-triangle"></div>
+                           <div class="small-lamp small-lamp--start"></div>
                         </div>
-                        <div class="decor__bumper-path"></div>
-                        <div class="black-triangle"></div>
-                        <div class="small-lamp small-lamp--start"></div>
-                     </div>
-                     <div class="decor__center">
-                        <div class="decor__wrapper-picture-center">
-                           <div class="decor__picture-center picture-center">
-                              <div
-                                 class="picture-center__first-transparent-block">
-                                 <div class="picture-center__dark-block">
-                                    <div
-                                       class="picture-center__second-transparent-block">
+                        <div class="decor__center">
+                           <div class="decor__wrapper-picture-center">
+                              <div class="decor__picture-center picture-center">
+                                 <div
+                                    class="picture-center__first-transparent-block">
+                                    <div class="picture-center__dark-block">
                                        <div
-                                          class="picture-center__third-transparent-block">
+                                          class="picture-center__second-transparent-block">
+                                          <div
+                                             class="picture-center__third-transparent-block">
+                                          </div>
                                        </div>
                                     </div>
                                  </div>
+                                 <span
+                                    class="picture-center__text picture-center__text--dark">BOSS</span>
+                                 <span
+                                    class="picture-center__text picture-center__text--yellow">203</span>
                               </div>
-                              <span
-                                 class="picture-center__text picture-center__text--dark">BOSS</span>
-                              <span
-                                 class="picture-center__text picture-center__text--yellow">203</span>
                            </div>
+                           <div class="decor__shadow-start-center"></div>
+                           <div class="decor__gradient"></div>
+                           <div class="decor__shadow-center"></div>
                         </div>
-                        <div class="decor__shadow-start-center"></div>
-                        <div class="decor__gradient"></div>
-                        <div class="decor__shadow-center"></div>
+                        <div class="decor__end">
+                           <div class="small-lamp small-lamp--end"></div>
+                           <div class="silver-triangle"></div>
+                        </div>
                      </div>
-                     <div class="decor__end">
-                        <div class="small-lamp small-lamp--end"></div>
-                        <div class="silver-triangle"></div>
-                     </div>
-                  </div> -->
                      <div class="lower-path__wheels wheels">
                         <div class="wheels__block  wheels__block--front">
                            <div class="wheels__bg"></div>
@@ -156,22 +157,20 @@
                         </div>
                      </div>
                   </div>
-                  <!-- <div class="car__door">
+                  <div class="car__door">
                      <div class="car__handle"></div>
-                  </div> -->
+                  </div>
                   <div class="car__side-window side-window">
-                     <!-- <div class="side-window__back back">
+                     <div class="side-window__back back">
                         <div class="back__left"></div>
-                     </div> -->
-                     <!-- <div class="side-window__front front">
+                     </div>
+                     <div class="side-window__front front">
                         <div class="front__bg"></div>
                         <div class="front__top-line"></div>
                         <div class="front__bottom-line"></div>
-                     </div> -->
-                     <!-- <div class="car__side-mirror side-mirror">
-                     </div> -->
+                     </div>
+                     <div class="car__side-mirror side-mirror"></div>
                   </div>
-
                </div>
                <div class="section__indicator indicator">
                   <div class="indicator__list">
@@ -188,29 +187,33 @@
                      <div class="indicator__item">
                         <div class="indicator__border"></div>
                         <div class="indicator__bg"></div><span
-                           class="indicator__text">Window</span>
+                           class="indicator__text">Windows</span>
+                     </div>
+                     <div class="indicator__item">
+                        <div class="indicator__border"></div>
+                        <div class="indicator__bg"></div>
+                        <span class="indicator__text">Door</span>
+                     </div>
+                     <div class="indicator__item">
+                        <div class="indicator__border"></div>
+                        <div class="indicator__bg"></div>
+                        <span class="indicator__text">Front</span>
+                     </div>
+                     <div class="indicator__item">
+                        <div class="indicator__border"></div>
+                        <div class="indicator__bg"></div>
+                        <span class="indicator__text">Back</span>
+                     </div>
+                     <div class="indicator__item">
+                        <div class="indicator__border"></div>
+                        <div class="indicator__bg"></div>
+                        <span class="indicator__text">Decor</span>
                      </div>
                      <!--
-                     <div class="indicator__item">
-                        <div class="indicator__border"></div>
-                        <div class="indicator__bg"></div>
-                        <span class="indicator__text">Window</span>
-                     </div>
-                     <div class="indicator__item">
-                        <div class="indicator__border"></div>
-                        <div class="indicator__bg"></div>
-                        <span class="indicator__text">Light</span>
-                     </div>
-                     <div class="indicator__item">
-                        <div class="indicator__border"></div>
-                        <div class="indicator__bg"></div>
-                        <span class="indicator__text">Picture</span>
-                     </div>
-                     <div class="indicator__item">
-                        <div class="indicator__border"></div>
-                        <div class="indicator__bg"></div>
-                        <span class="indicator__text">Neon</span>
-                     </div> -->
+
+                     
+
+
                   </div>
                </div>
             </div>
