--- a/ford-car/index.html
+++ b/ford-car/index.html
@@ -43,7 +43,7 @@
                         <div class="lower-path__hood hood">
                            <div class="hood__decor"></div>
                         </div>
-                        <!-- <div class="lower-path__exhaust"></div> -->
+                        <div class="lower-path__exhaust"></div>
                         <div class="lower-path__front"></div>
                         <div class="lower-path__center-back">
                         </div>
@@ -197,23 +197,19 @@
                      <div class="indicator__item">
                         <div class="indicator__border"></div>
                         <div class="indicator__bg"></div>
-                        <span class="indicator__text">Front</span>
+                        <span
+                           class="indicator__text indicator__text--center">Other<br>details</span>
                      </div>
                      <div class="indicator__item">
                         <div class="indicator__border"></div>
                         <div class="indicator__bg"></div>
-                        <span class="indicator__text">Back</span>
+                        <span class="indicator__text">Light</span>
                      </div>
                      <div class="indicator__item">
                         <div class="indicator__border"></div>
                         <div class="indicator__bg"></div>
                         <span class="indicator__text">Decor</span>
                      </div>
-                     <!--
-
-                     
-
-
                   </div>
                </div>
             </div>
