add page - furniture

--- a/lesson-15/index.html
+++ b/lesson-15/index.html
@@ -12,7 +12,7 @@
 
 <body class="body">
    <div class="wrapper">
-      <header class="header">
+      <header class="header header">
          <div class="header__container">
             <ul class="header__nav nav">
                <li class="nav__item">
@@ -20,7 +20,10 @@
                      href="index.html">Practice</a>
                </li>
                <li class="nav__item">
-                  <a class="nav__link" href="models.html">Models</a>
+                  <a class="nav__link" href="clothing.html">Clothing</a>
+               </li>
+               <li class="nav__item">
+                  <a class="nav__link" href="furniture.html">Furniture</a>
                </li>
             </ul>
          </div>
@@ -1057,7 +1060,10 @@
                      href="index.html">Practice</a>
                </li>
                <li class="nav__item">
-                  <a class="nav__link" href="models.html">Models</a>
+                  <a class="nav__link" href="clothing.html">Clothing</a>
+               </li>
+               <li class="nav__item">
+                  <a class="nav__link" href="furniture.html">Furniture</a>
                </li>
             </ul>
             <p class="footer__name">Fedorova Natalia</p>
