furniture page - add reviews section

--- a/lesson-15/furniture.html
+++ b/lesson-15/furniture.html
@@ -10,9 +10,8 @@
 
 </head>
 
-<!-- f - furniture  -->
-
 <body class="body body--f-color-font">
+   <!-- f - furniture  -->
    <div class="wrapper wrapper--f-mb">
       <header class="f-header">
          <div class="f-header__container f-header__container--width">
@@ -69,14 +68,14 @@
             </div>
          </div>
       </header>
-      <main class="page page--f-mb">
+      <main class="page page-f page--f-mb">
          <div class="popular-products popular-products--mb">
             <div
                class="popular-products__container popular-products__container--width">
                <div class="popular-products__top-part">
                   <div class="popular-products__title-group title-group">
                      <h2 class="title-group__title">POPULAR PRODUCT</h2>
-                     <p class="title-group__text">Top Special Product</p>
+                     <p class="title-group__text">Our best products</p>
                   </div>
                   <a href="#"
                      class="popular-products__more-link link-template">See More
@@ -88,7 +87,7 @@
                      <div class="list-products__item item-product">
                         <div class="item-product__top-part">
                            <a href="#" class="item-product__link-img">
-                              <img src="img/furniture/chair-1.webp"
+                              <img src="img/furniture/chair-2.webp"
                                  alt="white chair">
                            </a>
                            <ul class="item-product__options options">
@@ -170,7 +169,7 @@
                      <div class="list-products__item item-product">
                         <div class="item-product__top-part">
                            <a href="#" class="item-product__link-img">
-                              <img src="img/furniture/chair-2.webp"
+                              <img src="img/furniture/chair-1.webp"
                                  alt="beige chair">
                            </a>
                            <ul class="item-product__options options">
@@ -403,6 +402,121 @@
                                  </use>
                               </svg>
                            </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="reviews">
+            <div class="reviews__container reviews__container--width">
+               <div
+                  class="reviews__title-group title-group title-group--center">
+                  <h2
+                     class="title-group__title title-group__title--reviews-section">
+                     Customer reviews</h2>
+                  <p class="title-group__text title-group__text--center">What
+                     customers think about us</p>
+               </div>
+               <div class="reviews__list ">
+                  <div class="reviews__column">
+                     <div class="reviews__item">
+                        <div class="reviews__avatar">
+                           <img src="img/furniture/person-3.webp" alt="man">
+                        </div>
+                        <div class="reviews__main-content">
+                           <p class="reviews__name">Viggo Peter Mortensen Jr.
+                           </p>
+                           <p class="reviews__work">Actor</p>
+                           <div class="reviews__rating">
+                              <svg class="reviews__icon" width="15" height="14">
+                                 <use
+                                    href="img/furniture/furniture-icons.svg#icon-star">
+                                 </use>
+                              </svg>
+                              <p class="reviews__num">
+                                 4.0</p>
+                           </div>
+                           <p class="reviews__text">Lorem ipsum dolor, sit amet
+                              consectetur adipisicing elit. Vero maxime ex
+                              voluptatem rem molestiae numquam cumque odio
+                              pariatur quod nostrum!</p>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="reviews__column">
+                     <div class="reviews__item">
+                        <div class="reviews__avatar">
+                           <img src="img/furniture/person-1.webp" alt="moman">
+                        </div>
+                        <div class="reviews__main-content">
+                           <p class="reviews__name">Jane Doe
+                           </p>
+                           <p class="reviews__work">Manager
+                           </p>
+                           <div class="reviews__rating">
+                              <svg class="reviews__icon" width="15" height="14">
+                                 <use
+                                    href="img/furniture/furniture-icons.svg#icon-star">
+                                 </use>
+                              </svg>
+                              <p class="reviews__num">
+                                 5.0</p>
+                           </div>
+                           <p class="reviews__text">Lorem ipsum dolor, sit amet
+                              consectetur adipisicing elit. Vero maxime ex
+                              voluptatem rem molestiae numquam cumque odio
+                              pariatur quod nostrum!</p>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="reviews__column">
+                     <div class="reviews__item">
+                        <div class="reviews__avatar">
+                           <img src="img/furniture/person-2.webp" alt="man">
+                        </div>
+                        <div class="reviews__main-content">
+                           <p class="reviews__name">Sir Peter Robert Jackson
+                           </p>
+                           <p class="reviews__work">Director, producer,
+                              writer
+                           </p>
+                           <div class="reviews__rating">
+                              <svg class="reviews__icon" width="15" height="14">
+                                 <use
+                                    href="img/furniture/furniture-icons.svg#icon-star">
+                                 </use>
+                              </svg>
+                              <p class="reviews__num">
+                                 4.0</p>
+                           </div>
+                           <p class="reviews__text">Lorem, ipsum dolor sit amet
+                              consectetur adipisicing elit. In, sint.</p>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="reviews__column">
+                     <div class="reviews__item">
+                        <div class="reviews__avatar">
+                           <img src="img/furniture/person-4.webp" alt="man">
+                        </div>
+                        <div class="reviews__main-content">
+                           <p class="reviews__name">Arwen Undómiel</p>
+                           <p class="reviews__work">back end developer</p>
+                           <div class="reviews__rating">
+                              <svg class="reviews__icon" width="15" height="14">
+                                 <use
+                                    href="img/furniture/furniture-icons.svg#icon-star">
+                                 </use>
+                              </svg>
+                              <p class="reviews__num">
+                                 4.5</p>
+                           </div>
+                           <p class="reviews__text">Lorem ipsum dolor, sit amet
+                              consectetur adipisicing elit. Vero maxime ex
+                              voluptatem rem molestiae numquam cumque odio
+                              pariatur quod nostrum!
+                              lorem100</p>
                         </div>
                      </div>
                   </div>
