--- a/lesson-15/clothing.html
+++ b/lesson-15/clothing.html
@@ -58,7 +58,8 @@
                                     Shirts
                                  </a>
                               </h3>
-                              <p class="card__text">Explore Now!</p>
+                              <p class="card__text">Explore Now!
+                              </p>
                            </div>
                            <a class="card__link">
                               <img src="img/arrow.svg" alt="/arrow">
